[fix] scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -76,15 +76,10 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 0px;
   height: 0px;
-}
-::-webkit-scrollbar-thumb {
-  background-color: #817161;
-  background-clip: padding-box;
-  border-radius: 3px;
-}
+} */
 
 :focus {
   outline: none;
@@ -93,4 +88,8 @@ input[type='number']::-webkit-outer-spin-button {
 
 button {
   outline: none;
+}
+
+select option:first-child {
+  display: none;
 }
